<resources>
    <string name="app_name">SCI IU</string>
    <string name="inpLoginMail">Email</string>
    <string name="inpPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="strWelcome">Welcome</string>
    <string name="search">Buscar</string>
    <string name="content_description_search">Description search</string>
    <string name="more">Más</string>
    <string name="content_description_more">Description más</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="action">action</string>
    <string name="supporting_text">supporting text</string>
    <string name="title">title</string>
    <string name="usersFragment">Users</string>
    <string name="usersAdd">Add user</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_media">Content descr</string>
    <string name="secondary_text">Secondary text</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="User">User</string>
    <string name="tfEmail">Email</string>
    <string name="tfName">Name</string>
    <string name="userSave">Save</string>
    <string name="edit">Edit</string>
    <string name="branchOfficeFragment">Branch Offices</string>
    <string name="boAdd">Add</string>
    <string name="tfLocation">Location</string>
</resources>