<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BranchOfficeFormFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="12dp"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            android:layout_margin="10dp"
            android:outlineSpotShadowColor="@color/DarkSecondaryColor"
            >
            <TextView
                android:id="@+id/tvReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branchOfficeFragment"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:layout_marginVertical="10dp"
                android:layout_gravity="start|center"
                android:drawableLeft="@drawable/ic_arrow_back"
                />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userSave"
                android:layout_marginVertical="3dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="right"
                app:icon="@drawable/ic_save"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                />


        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_below="@id/cardView"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tfName"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toBottomOf="@id/cardView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="25dp"
                android:paddingVertical="15dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfLocationId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tfLocation"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintTop_toBottomOf="@id/tfLocationId"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="25dp"
                android:paddingVertical="15dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Locations"
                app:layout_constraintTop_toBottomOf="@id/tfLocationId"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="25dp"
                android:paddingVertical="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>